k8s_config/k8s_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      #this selector is used to connect to service-selector-run
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: api-image
          imagePullPolicy: Never
          ports:
            - containerPort: 7080
