k8s_config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  # Uncomment the below line to create a Headless Service
  # clusterIP: None
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 7080
      targetPort: 7080
      #nodePort: 30070
